--- a/bin/ProxyInfoWeb.dll.config
+++ b/bin/ProxyInfoWeb.dll.config
@@ -14,6 +14,7 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="SMSuser"  value="SGRMND"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
